# near-randomness-example

./: README.md
contract/: Cargo.toml  build.sh
contract/src/: lib.rs
